--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package pom.xml
+      run: mvn -B package --file WeBook_WebApp_Framework/pom.xml
 
 
