--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file WeBook_WebApp_Framework/pom.xml
+      run:  mvn clean test --fill pom.xml
+      working-directory: https://github.com/Mohamed-Ishak/WeBook_WebApp_Framework/tree/master
 
 
