--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,13 +22,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean test /home/runner/work/WeBook_WebApp_Framework/WeBook_WebApp_Framework/pom.xml
+      run: mvn clean test --file /WeBook_WebApp_Framework/WeBook_WebApp_Framework/pom.xml
       working-directory: WeBook_WebApp_Framework
 
 
